Bug #36226 Inconsistent handling when passing potential arrays

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_1@206271 c90b9560-bf6c-de11-be94-00142212c4b1